--- a/index.html
+++ b/index.html
@@ -79,203 +79,78 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
   <!-- Any section element inside of this container is displayed as a slide -->
   <div class="slides">
     <section class="slide-1">
-      <h2>Modular frontend with NPM & pals</h2>
+      <h2>Building high quality services at uber</h2>
 
       <h3><a href="http://twitter.com/raynos">@Raynos</a></h3>
     </section>
 
-    <section class="slide-1.5">
-      <h2>Overview</h2>
-
-      <ul>
-        <li>How to use modules in your app</li>
-        <li>Authoring small modules is great for collaboration</li>
-        <li>You can author self-contained UI widgets as modules</li>
-        <li>How to build your own custom flexible "framework" from modules</li>
-      </ul>
-    </section>
-
-    <section>
     <section class="slide-2">
-      <h3>Tools of the trade</h3>
+      <h2>Day one: The ironfist trial</h2>
 
       <ul>
-        <li>npm</li>
-        <li>browserify</li>
-        <li>unix</li>
+        <li>Build a simple proxy service</li>
+        <li>Deploy it to 50 machines</li>
+        <li>Do not go down, ever.</li>
       </ul>
     </section>
 
+    <section>
     <section class="slide-3">
-      <h3>npm</h3>
+      <h2>Just "productionize" it</h2>
 
-      <br>
-      <p>
-      npm is a package manager for JavaScript. It allows for
-      easily authoring small modules without dependency hell
-      </p>
+      <h3><a href="https://github.com/uber/rt-logger">rt-logger</a></h3>
+      <ul>
+        <li>Logging info, warn and error.</li>
+        <li>Logging to a distributed Queue</li>
+        <li>Logging to an error reporting service</li>
+      </ul>
     </section>
-
     <section class="slide-4">
-      <h3>browserify</h3>
+      <h2>Just "productionize" it</h2>
+
+      <h3><a href="https://github.com/uber/lynx">lynx</a></h3>
 
       <ul>
-        <li>commonJS for browsers</li>
-        <li>supports node_modules</li>
-        <li>creates a single JS file</li>
+        <li>Monitor everything</li>
+        <li>Monitor occurances of warnings</li>
+        <li>Monitor volume of traffic</li>
+        <li>Monitor volume of business objects / events</li>
       </ul>
-
-      <br/><br/>
-      <a href='https://github.com/substack/browserify-handbook'>Check out browserify handbook</a>
     </section>
-
     <section class="slide-5">
-      <h3>unix</h3>
+      <h2>Just "productionize" it</h2>
 
-      <br>
-      <blockquote>
-        <p>Developers should build a program out of simple parts connected by well defined interfaces, so problems are local, and parts of the program can be replaced in future versions to support new features. This rule aims to save time on debugging code that is complex, long, and unreadable.</p>
-      </blockquote> 
-      
-    </section>
-    </section>
+      <h3><a href="https://github.com/uber/zero-config">zero-config</a></h3>
 
-    <section>
+      <ul>
+        <li>Manage config files</li>
+        <li>Deal with command line overwrites</li>
+        <li>Support multiple datacenters</li>
+        <li>Allow remote overwrites</li>
+      </ul>
+    </section>
     <section class="slide-6">
-      <h3>Using modules</h3>
+      <h2>Just "productionize" it</h2>
 
-      <p>The why?</p>
+      <h3><a href="https://github.com/uber/uncaught-exception">uncaught-exception</a></h3>
 
-      <br>
       <ul>
-        <li>Pick the best of everything</li>
-        <li>Use exactly what you need, no more</li>
-        <li>No lock in, freedom to switch whenever</li>
+        <li>Log uncaught exceptions</li>
+        <li>Do a graceful shutdown</li>
+        <li>Abort and dump core.</li>
       </ul>
     </section>
-
     <section class="slide-7">
-      <h3>Using modules</h3>
+      <h2>Just "productionize" it</h2>
 
-      <p>The where?</p>
-
-      <br>
-      <ul>
-        <li><a href='https://github.com/npm-dom'>npm-dom</a></li>
-        <li><a href='http://modules.gl/'>gl-modules</a></li>
-        <li><a href='http://voxeljs.com/'>voxelJS</a></li>
-        <li><a href='https://www.npmjs.org/search?q=level-'>levelDB</a></li>
-        <li><a href='https://github.com/substack/stream-handbook'>streams handbook</a></li>
-      </ul>
-    </section>
-
-    <section class="slide-8">
-      <h3>Demo time</h3>
-
-      <p>Building a little app with modules</p>
-      <a href='https://github.com/Raynos/jsconf2014-talk/blob/gh-pages/demos/spinner.js'>A small spinner app</a>
-    </section>
-    </section>
-    
-    <section>
-    <section class="slide-9">
-      <h3>Modules & Collaboration</h3>
-
-      <br>
-      <p>People can re-use & expand on the small modules you build</p>
-    </section>
-
-    <section class="slide-10">
-      <h3>xhr</h3>
-
-      <br>
-      <p>A module that does one thing, sends http requests</p>
-    </section>
-
-    <section class="slide-11">
-      <h3>And its dependents</h3>
-
-      <br>
-      <ul>
-        <li><a href='https://github.com/scottcorgan/httpify'>httpify</a></li>
-        <li><a href='https://github.com/nathan7/xhr-json'>xhr-json</a></li>
-        <li><a href='https://www.npmjs.org/package/flatsheet'>flatsheet</a></li>
-      </ul>
-    </section>
-    </section>
-
-    <section class="slide-12">
-      <h3>Building a modular "framework"</h3>
-
-      <br>
-      <ul>
-        <li>Decompose the problem space</li>
-        <li>Work from the ground up</li>
-        <li>Solve each problem well in isolation</li>
-      </ul>
-    </section>
-
-    <section>
-    <section class="slide-13">
-      <h3>A unidirectional approach</h3>
-
-      <br>
-      <p>Observable & Immutable state</p>
-      <ul>
-        <li><a href='https://github.com/Raynos/observ'>observ</a></li>
-        <li><a href='https://github.com/Raynos/observ-hash'>observ-hash</a></li>
-        <li><a href='https://github.com/Raynos/observ-array'>observ-array</a></li>
-      </ul>
-    </section>
-
-    <section class="slide-14">
-      <h3>A unidirectional approach</h3>
-
-      <br>
-      <p>Representing input</p>
-      <ul>
-        <li><a href='https://github.com/Raynos/geval'>geval</a></li>
-        <li><a href='https://github.com/Raynos/value-event'>value-event</a></li>
-        <li><a href='https://github.com/Raynos/dom-delegator'>dom-delegator</a></li>
-      </ul>
-    </section>
-
-    <section class="slide-15">
-      <h3>A unidirectional approach</h3>
-
-      <br>
-      <p>Rendering the view</p>
-      <ul>
-        <li><a href='https://github.com/Matt-Esch/vtree'>vtree</a></li>
-        <li><a href='https://github.com/Matt-Esch/vdom'>vdom</a></li>
-        <li><a href='https://github.com/Raynos/virtual-hyperscript'>virtual-hyperscript</a></li>
-      </ul>
-    </section>
-    </section>
-
-    <section class="slide-16">
-      <h3>Demo time</h3>
-
-      <p>Publishing UI components as modules</p>
-      <a href='https://github.com/Raynos/jsconf2014-talk/blob/gh-pages/demos/github-widget.js'>Using a github widget module</a>
-    </section>
-
-    <section class="slide-17">
-      <h3>Demo time</h3>
-
-      <p>Building your own unidirectional app with modules</p>
-      <a href='https://github.com/Raynos/jsconf2014-talk/blob/gh-pages/demos/todo-list.js'>A unidirectional demo</a>
-    </section>
-
-    <section class="slide-18">
-      <h2>Overview</h2>
+      <h3>Pager duty and nagios</h3>
 
       <ul>
-        <li>How to use modules in your app</li>
-        <li>Authoring small modules is great for collaboration</li>
-        <li>You can author self-contained UI widgets as modules</li>
-        <li>How to build your own custom flexible "framework" from modules</li>
+        <li>When a health check fails nagios knows</li>
+        <li>When a dashboard spikes nagios knows</li>
+        <li>When nagios knows, pager duty wakes you up</li>
       </ul>
+    </section>
     </section>
 
     <section class="slide-19">
@@ -286,27 +161,38 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
 
     <!-- Talk (npm):
 
-This talk is about a modular frontend which is an approach not common to most frontend developers. No jQuery, no frameworks. Instead many small, simple abstractions are used, published to npm and bundled with browserify.
 
-The NPM-style frontend prefers modularity and simple abstractions that do one thing well. THis talk includes:
+ - how we do production quality logging for 100s of processes.
+ - how we do service monitoring
+ - how we get from idea to production in <4 hours
+ - how we use & extend npm shrinkwrap.
+ - how we do control ports
+ - how we do runtime javascript performance monitoring
+ - how we manage a grid of node applications dynamically for scaling & availability
 
- - Various approaches to creating standalone “components” or “widgets” that are published to npm, including styles & templates.
- - How to compose various modules together to build your own “framework” with your own trade offs.
- - How to compose an application from smaller applications
- - Build small UI components with thin interfaces that you glue together in your application.
- - Your entry point is small, containing the minimal glue code and each UI component addresses its own concerns.
+Some of these concepts are already open source at https://github.com/uber and the others are being open sourced in the next few months.
 
-The four stories:
+There is a lot of really cool shit being build with a strong emphasis on open source and modularity within uber and it's being battle tested at a pretty massive scale, I'm personally leading the open source initiatives at uber.
 
- - Writing a small module, like `xhr` other people can build
-    cool stuff on top of it. (httpify & xhr-json)
- - You can use small modules instead of frameworks today,
-    like all these modules in npm-dom.
- - You can build your own unidirectional framework, using
-    small modules.
- - You can build your own standalone component and publish it
-    to npm.
+ - how we do logging
+ - how we monitor services
+ - how we create new services, including automating CI & deployment
+ - how we use shrinkwrap
+ - how we do control ports (run time service inspection)
 
+The goal:
+
+ - Make it fast
+ - Make it simple
+ - Make it quality
+
+The stories;
+
+ - Joining uber and not knowing how to run something at scale
+ - Making it easy for other new engineers to use best practices
+    out of the box
+ - Hiding infrastructure complexity behind a shiny interface
+ - Giving people tools & clients to do the right thing
 
 -->
 
