mention playdoh-perf

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
   <!-- Any section element inside of this container is displayed as a slide -->
   <div class="slides">
     <section class="slide-1">
-      <h2>Building high quality services at uber</h2>
+      <h2>Building high quality services at Uber</h2>
 
       <h3><a href="http://twitter.com/raynos">@Raynos</a></h3>
     </section>
@@ -141,6 +141,17 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
       </ul>
     </section>
     <section class="slide-7">
+      <h2>Just "productionize" it</h2>
+
+      <h3><a href="https://github.com/uber/playdoh-perf">playdoh-perf</a></h3>
+
+      <ul>
+        <li>Run a control port for every service</li>
+        <li>Expose a profiler</li>
+        <li>Expose heapdumps</li>
+      </ul>
+    </section>
+    <section class="slide-8">
       <h2>Just "productionize" it</h2>
 
       <h3>Pager duty and nagios</h3>
