--- a/index.html
+++ b/index.html
@@ -164,6 +164,19 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
     </section>
     </section>
 
+    <section class="slide-9">
+      <h2>Getting started quickly</h2>
+
+      <h3><a href="https://github.com/uber/potter">potter</a></h3
+      >
+
+      <ul>
+        <li>How do you scaffold a new app</li>
+        <li>How do you setup CI</li>
+        <li>How do you get it deployed</li>
+      </ul>
+    </section>
+
     <section class="slide-19">
       <h1>Thanks.</h1>
 
