--- a/index.html
+++ b/index.html
@@ -177,10 +177,71 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
       </ul>
     </section>
 
+    <section>
+    <section class="slide-10">
+      <h2>Potter workflows</h2>
+
+      <h3>Local workflow</h3>
+
+      <ul>
+        <li>Check for conflicts</li>
+        <li>Scaffold out some files</li>
+        <li>Create a local git repository</li>
+        <li>Ensure tests pass and you can work</li>
+      </ul>
+    </section>
+    <section class="slide-11">
+      <h2>Potter workflows</h2>
+
+      <h3>Shared workflow</h3>
+
+      <ul>
+        <li>Push to a gitolite remote</li>
+        <li>Setup documentation and wiki</li>
+        <li>Setup jenkins CI</li>
+      </ul>
+    </section>
+    <section class="slide-12">
+      <h2>Potter workflows</h2>
+
+      <h3>EC2 workflow</h3>
+
+      <ul>
+        <li>Setup your app in puppet</li>
+        <li>deploy your app to your own EC2</li>
+      </ul>
+    </section>
+    <section class="slide-13">
+      <h2>Potter workflows</h2>
+
+      <h3>production workflow</h3>
+
+      <ul>
+        <li>Setup sentry</li>
+        <li>Setup graphite</li>
+        <li>Integrate with deployment system</li>
+      </ul>
+    </section>
+    </section>
+
+    <section class="slide-14">
+      <h2>Potter plugins</h2>
+
+      <br>
+      <h3>You can write your own workflow</h3>
+
+      <br>
+      <h3>Coming soon: open source workflow</h3>
+    </section>
+
+
     <section class="slide-19">
       <h1>Thanks.</h1>
 
       <h3><a href="http://twitter.com/raynos">@Raynos</a></h3>
+      <br>
+      <h3>Oh, and we're hiring:</h3>
+      <h3>jakev@uber.com</h3>
     </section>
 
     <!-- Talk (npm):
