add more content

--- a/index.html
+++ b/index.html
@@ -231,11 +231,12 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
       <h3>You can write your own workflow</h3>
 
       <br>
-      <h3>Coming soon: open source workflow</h3>
+      <h3>Just write a plugin that implements your own
+        commands</h3>
     </section>
 
 
-    <section class="slide-19">
+    <section class="slide-15">
       <h1>Thanks.</h1>
 
       <h3><a href="http://twitter.com/raynos">@Raynos</a></h3>
