potter demo slide

--- a/index.html
+++ b/index.html
@@ -235,8 +235,13 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
         commands</h3>
     </section>
 
-
     <section class="slide-15">
+      <h2>Potter demo</h2>
+
+      <h3>DO IT LIVE.</h3>
+    </section>
+
+    <section class="slide-16">
       <h1>Thanks.</h1>
 
       <h3><a href="http://twitter.com/raynos">@Raynos</a></h3>
