--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
     <section class="slide-3">
       <h2>Just "productionize" it</h2>
 
-      <h3><a href="https://github.com/uber/rt-logger">rt-logger</a></h3>
+      <h3><a href="https://github.com/uber/logtron">logtron</a></h3>
       <ul>
         <li>Logging info, warn and error.</li>
         <li>Logging to a distributed Queue</li>
@@ -143,7 +143,7 @@ document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.se
     <section class="slide-7">
       <h2>Just "productionize" it</h2>
 
-      <h3><a href="https://github.com/uber/playdoh-perf">playdoh-perf</a></h3>
+      <h3><a href="https://github.com/uber/controlport-perf">controlport-perf</a></h3>
 
       <ul>
         <li>Run a control port for every service</li>
